/* Noun */ Declension. <aqua#35047>

--- a/wiki/aqua.wikitext
+++ b/wiki/aqua.wikitext
@@ -13,6 +13,34 @@
 *[[aquarius]]
 *[[aquaticus]]
 
+====Declension====
+First declension.
+{| border="1" cellpadding="7"
+! ''case \ #''
+! ''F.''
+! ''FF.''
+|-
+! ''Nominative''
+| aqua
+| aquae
+|-
+! ''Genitive''
+| aquae
+| aqu&#257;rum
+|-
+! ''Dative''
+| aquae
+| aqu&#299;s
+|-
+! ''Accusative''
+| aquam
+| aqu&#257;s
+|-
+! ''Ablative''
+| aqu&#257;
+| aqu&#299;s
+|}
+
 ----
 
 ==Romanica==
