--- a/wiki/honor.wikitext
+++ b/wiki/honor.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
 '''honor''', plural: '''honors'''
-: An objectification of praise, respect.  (I.e. something that represents praise, respect.)
+: An objectification of praiseworthiness, respect.  (I.e. something that represents praiseworthiness, respect.)
