--- a/wiki/terminology.wikitext
+++ b/wiki/terminology.wikitext
@@ -4,5 +4,10 @@
 
 '''terminology'''
 
-#The doctrine of terms; a theory of terms or appellations; a treatise on terms.
-#The terms actually used in any business, art, science, or the like; nomenclature; technical terms; as, the terminology of chemistry.
+1. The doctrine of terms; a theory of terms or appellations; a treatise on terms.
+
+2. The terms actually used in any business, art, science, or the like; nomenclature; technical terms; as, the terminology of chemistry.
+
+
+====Translations====
+*Lithuanian: [[terminologija]] ''f'' (1); [[terminija]] ''f'' (2)
