--- a/wiki/honor.wikitext
+++ b/wiki/honor.wikitext
@@ -2,3 +2,37 @@
 ===Noun===
 '''honor''', plural: '''honors'''
 : An objectification of praiseworthiness, respect.  (I.e. something that represents praiseworthiness, respect.)
+
+==Latin==
+===Noun===
+'''honor''', m.
+: An objectification of praiseworthiness, respect.
+
+====Declension====
+Third declension.
+
+{| cellpadding="6" border="2"
+! ''case \ #''
+! ''M.''
+! ''MM.''
+|-
+! ''Nominative''
+| honor
+| hon&#333;r&#275;s
+|-
+! ''Genitive''
+| hon&#333;ris
+| hon&#333;rum
+|-
+! ''Dative''
+| hon&#333;r&#299;
+| hon&#333;ribus
+|-
+! ''Accusative''
+| hon&#333;rem
+| hon&#333;r&#275;s
+|-
+! ''Ablative''
+| hon&#333;re
+| hon&#333;ribus
+|}
