/* Noun */ Simplify definition. <honor#64176>

--- a/wiki/honor.wikitext
+++ b/wiki/honor.wikitext
@@ -6,7 +6,7 @@
 ==Latin==
 ===Noun===
 '''honor''', m.
-: An objectification of praiseworthiness, respect.
+: Honor.
 
 ====Declension====
 Third declension.
