--- a/wiki/term.wikitext
+++ b/wiki/term.wikitext
@@ -16,6 +16,7 @@
 *[[Finnish]]: [[ehto]] (1), [[termi]] (2,5), [[väleissä]] (3), [[lukukausi]] (4)
 *[[French]]: [[limite]] ''f'' (1), [[terme]] ''m'' (5)
 *[[German]]: [[Klausel]] ''f'' (1), [[Begriff]] ''m'' (2), [[Bezeichnung]] ''f'' (2), [[Terminus]] ''m'' (2), [[Trimester]] ''n'' (4), [[Term]] ''m'' (5)
+*Lithuanian: [[terminas]] ''m'' (as time limit - 1), (3); [[sąlyga]] ''f'' (2); [[santykiai]] ''m, pl'' (4); [[trimestras]], [[ketvirtis]] (when it takes ~3 months) or [[semestras]] (when it takes about 4 months]] (5)
 
 '''The following translations need to specify which of the above meanings they are translating:'''
 *Chinese: [[期限]]
