--- a/wiki/speech.wikitext
+++ b/wiki/speech.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 
+*Lithuanian: (1): [[šneka]] ''f'', [[kalba]] ''f''; (2): [[prakalba]] ''f'', [[pranešimas]] ''m'', [[kalba]] ''f''
 *Russian: [[речь]] ''f'' (2)
 
 ====Related terms====
