--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -38,7 +38,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *Bosnian: [[voda]]
 *[[Bresciano]]: [[aiva]]
 *[[Breton]]: [[dour]] ''m'' (''plural'' dourioù, doureier)
-*Belarusian: [[вaдa]]
+*Belarusian: вaдa
 *[[Catalan]]: [[aigua]] ''f''
 *[[Chechen]]: [[khi]], [[хи]]?
 *[[Cherokee]]: [[ᎠᎹ]] (ama)
