--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -43,7 +43,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *[[Chechen]]: [[khi]], [[хи]]?
 *[[Cherokee]]: [[ᎠᎹ]] (ama)
 *Chinese Characters: [[水]] ([[Pinyin]]: shuǐ)
-*Chinese: [[水]] ([[Pinyin]]: shuǐ)
+*Chinese: 水 ([[Pinyin]]: shuǐ)
 *Czech: [[voda]] ''f''
 *[[Cornish]]: [[dowr]] ''m''
 *Danish: vand
