Remove "Latin", "Adjective" headlines. <cetera#64182>

--- a/wiki/cetera.wikitext
+++ b/wiki/cetera.wikitext
@@ -1,6 +1,4 @@
-==Latin==
-===Adjective===
-('''c&#275;ter&#299;''', '''c&#275;terae''', '''c&#275;tera''')
+('''c&#275;ter&#299;''', '''c&#275;terae''', '''c&#275;tera'''), Latin adjective.
 :The rest, the remaining.
 
 ====Declension====
