--- a/wiki/semantics.wikitext
+++ b/wiki/semantics.wikitext
@@ -9,4 +9,5 @@ See [[seme]], [[semantic]], [[semiotic]], and [[semiotics]]
 *[[Finnish]]: [[semantiikka]]
 *[[French]]: [[sémantique]] ''f''
 *[[German]]: [[Semantik]] ''f''
+*[[Lithuanian]]: [[semantika]] ''f''
 *[[Persian]]: [[معنی‌شناسی]] (ma'ni-shenasi)
