--- a/wiki/phonetics.wikitext
+++ b/wiki/phonetics.wikitext
@@ -14,6 +14,7 @@
 ==== Translations ====
 :*{{msg:nl}}: [[fonetiek]] ''f'' (1)
 :*{{msg:de}}: [[Phonetik]] ''f'' (1), [[Lautlehre]] ''f'' (1)
+:*[[Lithuanian]]: [[fonetika]] ''f''
 :*[[Persian]]: [[آواشناسی]] (avashenasi)
 
 ====External links====
