--- a/wiki/morphology.wikitext
+++ b/wiki/morphology.wikitext
@@ -19,4 +19,5 @@
 
 ==== Translations ====
 *Dutch: [[morfologie]] ''f''
+*Lithuanian: [[sandara]] ''f'' (1), [[morfologija]] ''f'' (2, 3)
 *[[Persian]]: [[واژه‌شناسی]] (vazhe-shenasi)
