--- a/wiki/cetera.wikitext
+++ b/wiki/cetera.wikitext
@@ -1,4 +1,6 @@
-('''c&#275;ter&#299;''', '''c&#275;terae''', '''c&#275;tera'''), Latin adjective.
+==Latin==
+===Adjective===
+('''c&#275;ter&#299;''', '''c&#275;terae''', '''c&#275;tera''')
 :The rest, the remaining.
 
 ====Declension====
