/* Usage note */ <alumni#64181>

--- a/wiki/alumni.wikitext
+++ b/wiki/alumni.wikitext
@@ -7,7 +7,7 @@
 #: ''The alumni of this university include many famous artists and politicians.''
 
 ===Usage note===
-The plural ''alumni'' is often mistaken for singular, as in ''I am an alumni of this university.''  Google, for example, shows about 14,000 hits for "an alumni of" versus about 60,000 for "an alumnus of".  The next logical step, ''alumnis'' as plural, is also seen.  This sort of shift is normal in language usage, but the language of higher education should err on the side of conservatism, and ''alumni'' as singluar should still be considered incorrect despite is widening usage.
+The plural ''alumni'' is often mistaken for singular, as in ''I am an alumni of this university.''  Google, for example, shows about 14,000 hits for "an alumni of" versus about 60,000 for "an alumnus of".  The next logical step, ''alumnis'' as plural, is also seen.  This sort of shift is normal in language usage, but the language of higher education should err on the side of conservatism.  Therefore, ''alumni'' as singluar should still be considered incorrect despite its widening usage.
 
 ===Related Terms===
 *[[alumna]]
