--- a/wiki/science.wikitext
+++ b/wiki/science.wikitext
@@ -35,6 +35,7 @@ Sometimes uncountable
 *Japanese: [[科学]] (かがく, kagaku)
 *Korean: [[Hanja]]: [[학]] (hag), [[학문]] (hag-mun), [[과학]] (gwa-hag)
 *Latin: [[scientia]] ''f''
+*Lithuanian: [[mokslas]] ''m'' (2)
 *[[Persian]]: [[دانش]] (danesh)
 *{{pl}}: [[nauka]] ''f''
 *Romanian: [[ştiinţă]] ''f''
