--- a/wiki/skill.wikitext
+++ b/wiki/skill.wikitext
@@ -19,4 +19,5 @@
 *[[Indonesian]]: [[mampu|kemampuan]], [[ahli|keahlian]]
 *[[Interlingua]]: [[habilitate]], [[talento]]
 *[[Japanese]]: [[技能]] (ぎのう, ginō), [[技術]] (ぎじゅつ, gijutsu)
+*[[Lithuanian]]: [[įgūdis]] ''m''
 *[[Portuguese]]: [[habilidade]] ''f'', [[talento]] ''m''
