Make link to plagioclase index <feldspar#63923>

--- a/wiki/feldspar.wikitext
+++ b/wiki/feldspar.wikitext
@@ -15,7 +15,7 @@
 #[[Orthoclase]]
 #[[Microcline]]
 
-==== Plagioclase feldspars ====
+==== [[Plagioclase]] feldspars ====
 #[[Albite]]
 #[[Oligoclase]]
 #[[Andesine]]
