--- a/wiki/charity_mugger.wikitext
+++ b/wiki/charity_mugger.wikitext
@@ -2,7 +2,7 @@
 ===Noun phrase===
 '''[[charity]] [[mugger]]''' (''plural'' '''charity muggers''')
 
-#(''derogatory, colloquial'') A person [[employ]]ed by a [[charity]], or, typically by an intermediary fundraising agency employed by the charity, who stands in the street and invites [[passerby|passersby]] to set up [[standing order]]s or direct debits to make regular [[donation]]s to the charity.
+#(''derogatory, colloquial'') A person [[employ]]ed by a [[charity]], or by an intermediary fundraising agency employed by the charity, who stands in the street and invites [[passerby|passersby]] to set up [[standing order]]s or direct debits to make regular [[donation]]s to the charity.
 
 ====Synonyms====
 *[[chugger]]
