--- a/wiki/tosser.wikitext
+++ b/wiki/tosser.wikitext
@@ -1,5 +1,5 @@
-Chiefly British slang:
+Mainly British slang:
 
-A) A masturbater
-B) Someone the speaker doesn't like ('that bloke what knocked over my pint was a right tosser')
-C) An affiliate of the Project for a New American Century.
+:A) A masturbater
+:B) Someone the speaker doesn't like ('that bloke what ripped me off was a right tosser')
+:C) An affiliate of the Project for a New American Century.
