--- a/wiki/tosser.wikitext
+++ b/wiki/tosser.wikitext
@@ -1,5 +1,5 @@
 Mainly British slang:
 
-:A) A masturbater
+:A) Someone who masturbates
 :B) Someone the speaker doesn't like ('that bloke what ripped me off was a right tosser')
 :C) An affiliate of the Project for a New American Century.
