+Sunstone def. <oligoclase#64188>

--- a/wiki/oligoclase.wikitext
+++ b/wiki/oligoclase.wikitext
@@ -3,7 +3,7 @@
 :O lig' o klaze
 
 ===Noun===
-#A [[plagioclase]] [[feldspar]], the second member of the Albite-Anorthite [[solid solution]] series. Primarily found as small [[crystal]]s in impure [[marble]]. Oligoclase contains a small amount of [[calcium]] substituting for some of the [[sodium]] in its formula.
+#A [[plagioclase]] [[feldspar]], the second member of the Albite-Anorthite [[solid solution]] series. Primarily found as small [[crystal]]s in impure [[marble]]. Oligoclase contains a small amount of [[calcium]] substituting for some of the [[sodium]] in its formula. Oligoclase with reddish-golden inclusions found in [[Norway]] and [[Canada]] is called ''sunstone''.
 
 
 === Chemical composition ===
