--- a/wiki/dich.wikitext
+++ b/wiki/dich.wikitext
@@ -2,4 +2,4 @@
 
 ===Pronoun===
 # Accusative and reflexive case of [[du]].
-# ''Ich liebe dich nicht du liebst mich nicht.''
+#: ''Ich liebe dich nicht du liebst mich nicht.''
