--- a/wiki/magnum_opus.wikitext
+++ b/wiki/magnum_opus.wikitext
@@ -1,6 +1,7 @@
 '''Magnum opus''', from the [[Latin]] meaning ''great work'', refers to the best or most renowned achievement of an [[author]], [[artist]], or [[composer]].
 
 Examples:
+*[[Ludwig von Beethoven]]'s [[9th Symphony]]
 *[[Michelangelo Buonarroti]]'s ''[[Michelangelo's_David|David]]''
 *[[Pink Floyd]]'s ''[[Dark Side of the Moon]]''
 *[[Johann Wolfgang von Goethe]]'s ''[[Faust]]''
