--- a/wiki/jewfish.wikitext
+++ b/wiki/jewfish.wikitext
@@ -1,8 +1,23 @@
 ==English==
 ===Noun===
 '''jewfish'''
-
-# A type of [[fish]]. {{stub}}
+{{stub}}
+# A type of [[fish]], a Japanese Seabass. 
 
 ====Translations====
 *Japanese: [[スズキ]] (suzuki)
+
+Suzuki typical habitat is the seashore and in estuaries. As suzuki have been one of the most popular fishing species in Japan from ancient times, many Japanese cities have developed near these places. Japanese have associated suzuki with advancement in life and accordingly, the traditional name given to the suzuki changes as the length of the fish increases, as follows:
+
+'''Hanego''' -- under 30cm.
+ 	
+'''Seigo''' -- from 30 to 50cm.
+	
+'''Hukko''' -- from 50 to 70cm.
+	
+'''Suzuki''' -- from 70 to 90cm.
+	
+'''Nyudo''' -- over 90cm
+
+
+Some believe that suzuki bring good fortune.
