--- a/wiki/comrade.wikitext
+++ b/wiki/comrade.wikitext
@@ -1,1 +1,21 @@
-#REDIRECT [[Fellow]]
+==English==
+
+===Definition & Background===
+
+''Comrade'' comm-rad
+#A mate, companion, or associate.
+
+Made popular by the Soviets
+
+===Use===
+
+#Hello, comrade, are you going to the CPC meeting?
+
+
+==Russian==
+
+''Kамрад'' кам-рад
+
+
+
+{#REDIRECT [[Fellow]]}
