/* Translations */ <computer science#1743>

--- a/wiki/computer_science.wikitext
+++ b/wiki/computer_science.wikitext
@@ -17,6 +17,7 @@
 *Polish: [[Informatyka]]
 *Spanish: [[Informatica]]
 *Swedish: [[datavetenskap]]
+*Welsh: [[cyfrifiadureg]] ''f''
 
 ====See also====
 
