--- a/wiki/stipped.wikitext
+++ b/wiki/stipped.wikitext
@@ -1,5 +1,5 @@
 === Verb ===
 
-'''driven'''
+'''stipped'''
 
-# past participle of the '''[[intransitive]]''' verb ''to '''[[stip]]'''''
+# both the past participle and the past tense of the '''[[intransitive]]''' verb ''to '''[[stip]]'''''
