--- a/wiki/stipped.wikitext
+++ b/wiki/stipped.wikitext
@@ -2,4 +2,4 @@
 
 '''stipped'''
 
-# both the past participle and the past tense of the '''[[intransitive]]''' verb ''to '''[[stip]]'''''
+# both the '''[[past participle]]''' and the '''[[past tense]]''' of the '''[[intransitive]]''' verb ''to '''[[stip]]'''''
