/* External link */ fmt <copyleft#63708>

--- a/wiki/copyleft.wikitext
+++ b/wiki/copyleft.wikitext
@@ -22,4 +22,4 @@ Pun on [[copyright]]
 #: ''Linus Torvalds copylefted the Linux kernel.''
 
 ==External link==
-[[w:copyleft|Wikipedia article on copyleft]]
+*[[w:copyleft|Wikipedia article on copyleft]]
