/* Proper noun */  fmt <Oregon#64204>

--- a/wiki/Oregon.wikitext
+++ b/wiki/Oregon.wikitext
@@ -4,8 +4,9 @@
 Origin unknown; multiple theories persist. See [[w:Oregon#Origin_of_Oregon|Wikipedia article on Oregon]] for more information.
 
 ===Proper noun===
-''Oregon''
+'''Oregon'''
 # A state in the northwestern [[United States]]
+
 ===Derived terms===
 * [[Oregonian]]
 ===See also===
