/* Proper noun */  period fmt <Oregon#64204>

--- a/wiki/Oregon.wikitext
+++ b/wiki/Oregon.wikitext
@@ -5,7 +5,7 @@ Origin unknown; multiple theories persist. See [[w:Oregon#Origin_of_Oregon|Wikip
 
 ===Proper noun===
 '''Oregon'''
-# A state in the northwestern [[United States]]
+# A state in the northwestern [[United States]].
 
 ===Derived terms===
 * [[Oregonian]]
