--- a/wiki/spool.wikitext
+++ b/wiki/spool.wikitext
@@ -1,4 +1,3 @@
-= Verb =
-
-To send files to some device or program (a "spooler" or [[demon]]) that puts them in a queue for later processing of some kind. Without qualification, the spooler
+===Verb===
+#''(Computers):'' To send files to some device or program (a "spooler" or [[demon]]) that puts them in a queue for later processing of some kind. Without qualification, the spooler
 is the "print spooler" controlling output of jobs to a printer; but the term has been used in connection with other peripherals (especially plotters and graphics devices) and occasionally even for input devices.
