--- a/wiki/observat%C3%B3rio.wikitext
+++ b/wiki/observat%C3%B3rio.wikitext
@@ -1,13 +1,11 @@
-=Portuguese=
-
-==Noun==
-'''''m''' (plural: [[Observatórios]])''
-
-#[[Observatory]]
-
+==Portuguese==
 ===Pronunciation===
 ====Paulistano Accent====
 *IPA: /observa'tɔriu/
 
 ====Carioca Accent====
 *IPA: /obsexva'tɔriu/
+===Noun===
+'''''m''' (plural: [[Observatórios]])''
+
+#[[Observatory]]
