--- a/wiki/zounds.wikitext
+++ b/wiki/zounds.wikitext
@@ -5,5 +5,5 @@ From "[[God|(God')s]] [[wound|(w)ounds]]". Compare [[strewth]], [[blimey]].
 
 ===Interjection===
 '''Zounds!'''
-
+#An exclamation formerly used as an oath, and an expression of anger or wonder.
 #an exclamation of [[surprise]]
