--- a/wiki/zounds.wikitext
+++ b/wiki/zounds.wikitext
@@ -1,7 +1,7 @@
-=={{en}}==
-[[Category:English language]]
+==English==
+
 ===Etymology===
-From "[[God|(God')s]] [[wound|(w)ounds]]". Compare [[strewth]], [[blimey]].
+From [[Gods]]'s [[wound]]s. Compare [[strewth]], [[blimey]].
 
 ===Interjection===
 '''Zounds!'''
