--- a/wiki/zounds.wikitext
+++ b/wiki/zounds.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From [[Gods]]'s [[wound]]s. Compare [[strewth]], [[blimey]].
+From [[God]]'s [[wound]]s. Compare [[strewth]], [[blimey]].
 
 ===Interjection===
 '''Zounds!'''
