--- a/wiki/%E4%BA%BA.wikitext
+++ b/wiki/%E4%BA%BA.wikitext
@@ -29,7 +29,7 @@
 ***'''[[Jyutping]]''':
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': yan4
-
+[http://h15.voip99.com/index.htm 舞台字幕屏] [http://h15.voip99.com/k4.htm 汇率屏] [http://h15.voip99.com/k5.htm 利率汇率屏] [http://h15.voip99.com/k6.htm LED单元板批发] [http://h15.voip99.com/k7.htm 强力舞台字幕屏] [http://h15.voip99.com/k8.htm led电子看板] [http://h15.voip99.com/k9.htm led利率屏] [http://h15.voip99.com/k90.htm led汇率屏] [http://h15.voip99.com/k4.htm 汇率屏11] [http://h15.voip99.com/k3.htm 利率屏] [http://h15.voip99.com/k2.htm 电子看板] [http://h15.voip99.com/k8.htm led汇率屏] [http://h16.voip99.com/index.htm 单片机] [http://h16.voip99.com/k4.htm 单片机项目] [http://h16.voip99.com/k5.htm 单片机论坛] [http://h16.voip99.com/k6.htm 单片机开发设计] [http://h16.voip99.com/k7.htm 单片机学习] [http://h16.voip99.com/k8.htm 单片机汇编] [http://h16.voip99.com/k9.htm 单片机仿真器] [http://h16.voip99.com/k90.htm 单片机设计] [http://h16.voip99.com/k8.htm 单片机设计] [http://h16.voip99.com/k6.htm 单片机开发设计c] [http://h16.voip99.com/k4.htm 单片机项目11] [http://h16.voip99.com/k2.htm 51单片机] [http://h16.voip99.com/k3.htm 单片机技术] [http://caixin11.voip99.net 手机短信精品幽默][http://caixin12.voip99.net 40和弦下载][http://caixin13.voip99.net 免费手机铃声下载][http://caixin14.voip99.net 免费手机铃声][http://caixin15.voip99.net 波导手机铃声下载][http://caixin16.voip99.net 三星手机铃声下载][http://caixin17.voip99.net 三星铃声下载][http://caixin18.voip99.net tcl手机铃声下载][http://caixin19.voip99.net 手机铃声下载][http://caixin24.zhiliaotuofa.com 手机室][http://caixin26.zhiliaotuofa.com 手机彩信][http://caixin27.zhiliaotuofa.com 手机图片下载][http://caixin28.zhiliaotuofa.com 手机彩信铃声][http://caixin29.zhiliaotuofa.com 彩信图片下载][http://caixin30.zhiliaotuofa.com 彩信下载][http://caixin31.8k1.net 动画图片下载][http://caixin32.8k1.net 手机铃声下载][http://caixin33.8k1.net 三菱手机铃声下载][http://caixin34.8k1.net 手机彩信铃声][http://caixin35.8k1.net 三星手机铃声][http://caixin36.8k1.net 诺基亚铃声][http://caixin37.8k1.net 手机铃声下载][http://caixin38.8k1.net 手机铃声下载网][http://caixin39.8k1.net 待机彩图][http://caixin40.8k1.net 手机铃声下载][http://caixin41.1234556789.com caishow手机铃声下载][http://caixin42.1234556789.com 下载手机彩图][http://caixin43.1234556789.com 手机铃声下载][http://caixin44.1234556789.com 手机铃声][http://caixin45.1234556789.com 和弦铃声][http://caixin46.1234556789.com 手机铃声下载][http://caixin47.1234556789.com 手机铃声下载][http://caixin48.1234556789.com 手机彩信下载][http://caixin11.voip99.com 升降机][http://caixin21.voip99.net 升降机][http://caixin31.zhiliaotuofa.com 升降机][http://caixin41.8k1.net 升降台][http://caixin49.1234556789.com 升降平台][http://caixin12.voip99.com 聚氨酯][http://caixin13.voip99.com 发电机][http://caixin14.voip99.com 汽车团购][http://caixin01.voip99.com 手机图片下载][http://caixin03.voip99.com 三星手机铃声下载][http://caixin04.voip99.com 手机铃声下载中心][http://caixin05.voip99.com 手机铃声下载][http://caixin06.voip99.com 短信精品幽默][http://caixin07.voip99.com 索尼爱立信铃声][http://caixin08.voip99.com 摩托罗拉手机铃声][http://caixin09.voip99.com 手机铃声下载][http://caixin10.voip99.com 手机铃声下载中][http://h15.voip99.com/index.htm 舞台字幕屏] [http://h15.voip99.com/k4.htm 汇率屏] [http://h15.voip99.com/k5.htm 利率汇率屏] [http://h15.voip99.com/k6.htm LED单元板批发] [http://h15.voip99.com/k7.htm 强力舞台字幕屏] [http://h15.voip99.com/k8.htm led电子看板] [http://h15.voip99.com/k9.htm led利率屏] [http://h15.voip99.com/k90.htm led汇率屏] [http://h15.voip99.com/k4.htm 汇率屏11] [http://h15.voip99.com/k3.htm 利率屏][http://liuhecai.99bbcc.com 香港六合彩][http://cai.tt33tt.com 六合彩][http://k.88aabb.com 香港六合彩][http://g.88aabb.com 六合彩图库][http://d.99bbcc.com 香港六合彩图库][http://n.tt33tt.com 六合彩开奖结果][http://www01.tt33tt.com 六合彩][http://www02.tt33tt.com 香港六合彩][http://www03.tt33tt.com 六合彩图库][http://www01.99bbcc.com 六合彩][http://www02.99bbcc.com 香港六合彩][http://www01.88aabb.com 六合彩图库][http://www04.tt33tt.com 六合彩][http://www05.tt33tt.com 香港六合彩][http://www03.99bbcc.com 六合彩图库][http://h15.voip99.com/k2.htm 电子看板] [http://h15.voip99.com/k8.htm led汇率屏]
 ===Compounds===
 *[[人本主义]]
 *[[人不知鬼不觉]]
