--- a/wiki/cob.wikitext
+++ b/wiki/cob.wikitext
@@ -1,23 +1,2 @@
-==English==
-
-===Pronunciation===
-IPA: [[WEAE]] /kɑb/
-
-===Noun===
-'''cob'''
-
-#A male [[swan]].
-#The portion of a [[corn]] plant around which the kernels grow.
-#a spherical shaped [[loaf]] of [[bread]]
-#short for [[cobnut]]
-#short for [[cobble]] or [[cobblestone]]
-#a horse having a stout body and short legs
-
-
-====Translations====
-*French: [[cygne]] [[mâle]] ''m'' (''there is no special word in French for'' '''cob''' ''in this sense'') (1)
-*Lithuanian: [[gulbinas]] ''m''
-
-===Verb===
-'''to cob'''
-#(possibly colloquial, N UK) to [[throw]], [[chuck]], [[lob]]
+Close of business
+Usually referring to a deadline, for an office in another time zone.  NY office tells LA office to have report e-mailed by COB.
