--- a/wiki/stymie.wikitext
+++ b/wiki/stymie.wikitext
@@ -4,4 +4,8 @@
 
 '''to stymie'''
 
-#To thwart.
+#To thwart; to stump: a problem in thermodynamics
+
+1. An obstacle or obstruction.
+
+2. Sports. A situation in golf.
