I Owe You <IOU#64215>

--- a/wiki/IOU.wikitext
+++ b/wiki/IOU.wikitext
@@ -1,3 +1,4 @@
+==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
 I owe you
 
 Customarily, if you borrow $10 for lunch from a coworker, writing IOU $10 on a yellow sticky note acts as a legal promisory note that you will repay said amount on payday.
