--- a/wiki/cob.wikitext
+++ b/wiki/cob.wikitext
@@ -1,2 +1,3 @@
+==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
 Close of business
 Usually referring to a deadline, for an office in another time zone.  NY office tells LA office to have report e-mailed by COB.
