--- a/wiki/dance.wikitext
+++ b/wiki/dance.wikitext
@@ -1,1 +1,11 @@
-[[Movement]] to [[music]]
+==English==
+===Noun===
+
+# [[Movement]] to [[music]]
+
+====Translations====
+*French: [[danse]]
+*Japanese: [[踊り]] (おどり), [[舞踊]] (ぶよう)
+
+===Related terms===
+*[[dancer]]
