--- a/wiki/PTA.wikitext
+++ b/wiki/PTA.wikitext
@@ -1,2 +1,6 @@
 ==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
 Parent Teacher Association
+----
+==Japanese==
+
+# "parents and teachers' association"
