<rule of thumb#472030>

--- a/wiki/rule_of_thumb.wikitext
+++ b/wiki/rule_of_thumb.wikitext
@@ -2,6 +2,8 @@ A '''rule of thumb''' is an easily learned and easily applied procedure for appr
 
 The term "'''rule of thumb'''" or similar exists in many languages and cultures. Its likely origin is that the thumb is often used for rough measurement by carpenters, seamstresses, and many others.  In fact, the measurement of an [[inch]] is believed to have been derived from the distance between the tip of the thumb and the first joint. Rules of thumb such as the [[right hand rule]] in [[electromagnetics]] are also used as [[mnemonic]] devices. This usage, of course, is of more recent vintage. For most people, the crooked thumb held out at arm's length subtends an angle to the horizon roughly equal to one hour of time - in other words if the distance of the sun is a thumb's length (from tip to first joint) above the horizon, it is about one hour until sunset.
 
+== Myths about origins of term ==
+
 It is often claimed that the term originally referred to the maximum size of a stick with which it was permissible for a man to beat his wife. This claim has been debunked, for instance by [[Christina Hoff Sommers]] in her book ''[[Who Stole Feminism?]]'' ([[1994]] ISBN 0684801566).  In particular Sommers notes that there is no mention of this in the legal commentaries of [[ William Blackstone]]. 
 
 The [[fake etymology|popular etymology]] of the expression or its [[urban legend]] may have received a boost in the following quote from [[Del Martin]] of the [[National Organization for Women]]:
@@ -20,8 +22,8 @@ Regardless of whether Martin's analysis of old English common-law doctrines and 
 == See also ==
 
 *[[Heuristic argument]]
-
 *[[Tooth Fairy Rule]]
+*[[Fake etymology]]
 
 == External links ==
 *[http://www.canlaw.com/rights/thumbrul.htm About the Rule of Thumb]
