--- a/wiki/evidence.wikitext
+++ b/wiki/evidence.wikitext
@@ -4,7 +4,7 @@
 
 '''evidence''' (uncountable)
 
-#[[Facts]] or [[observations]] presented in support of an [[assertion]].
+#[[fact|Facts]] or [[observation|observations]] presented in support of an [[assertion]].
 #''(legal)'' Anything admitted by a [[court]] to prove or disprove alleged matters of fact in a [[trial]].
 
 ===Verb===
