--- a/wiki/majuscule.wikitext
+++ b/wiki/majuscule.wikitext
@@ -1,3 +1,6 @@
 =={{En}}==
 ===Noun===
 # A [[capital letter]], especially, one used in ancient [[manuscript]]s.
+
+===Related term===
+: [[Majuscule writing]]
