/* Noun */ <majuscule writing#64240>

--- a/wiki/majuscule_writing.wikitext
+++ b/wiki/majuscule_writing.wikitext
@@ -1,6 +1,6 @@
 =={{En}}==
 ===Noun===
-# Writing composed wholly of [[capital letter]]s, capital letters, especially the style which prevailed in [[Europe]] from the third to the sixth century.
+# Writing composed wholly of [[capital letter]]s, especially the style which prevailed in [[Europe]] from the third to the sixth century.
 
 ===Related term===
 : [[Majuscule]]
