/* Noun */ Added proper noun here <alley oop#64237>

--- a/wiki/alley_oop.wikitext
+++ b/wiki/alley_oop.wikitext
@@ -1,5 +1,11 @@
 ==English==
 
+===Proper Noun===
+'''Alley Oop'''
+
+# An American [[comic strip]] created in 1933 by V.T. Hamlin, currently written by Carole Bender and drawn by Jack Bender.
+# The caveman main character of the Alley Oop comic strip.
+
 ===Noun===
 '''alley oop'''
 
