Some rewrite, dewebsterization, +senses <slam#62605>

--- a/wiki/slam.wikitext
+++ b/wiki/slam.wikitext
@@ -4,18 +4,27 @@
 
 '''slam'''
 
-#The act of one who, or that which, slams.
-#The shock and noise produced in slamming.
-#Winning all the tricks of a deal.
-#The refuse of alum works.
+# An act of slamming.
+# The shock and noise produced in slamming.
+#(''basketball'') A [[slam dunk]].
+#(''bridge'') A bid of six (''[[small slam]]'') or seven (''[[grand slam]]'') in a suit or no trump.
+# (''colloquial'') An insult.
+#: ''I don't mean this as a slam, but you can be really impatient sometimes.''
+# The refuse of alum works.
 
 ===Verb===
 
 '''to slam'''
 
-#To shut with force and a loud noise; to bang; as, he slammed the door.
-#To put in or on some place with force and loud noise; -- usually with down; as, to slam a trunk down on the pavement.
-#To strike with some implement with force; hence, to beat or cuff.
-#To strike down; to slaughter.
-#To defeat (opponents at cards) by winning all the tricks of a deal or a hand.
-#To come or swing against something, or to shut, with sudden force so as to produce a shock and noise; as, a door or shutter slams.
+# To shut with force and a loud noise.
+#: ''He slammed the door.''
+# To put in or on some place with force and loud noise. Often used with ''down''.
+#: ''Don't slam that trunk down on the pavement!''
+# To shut with sudden force so as to produce a shock and noise.
+#: ''Don't slam the door!''
+# To strike forcefully with some implement.
+# (''card games'') To defeat by winning all the tricks of a deal or a hand.
+# (''bridge'') To make a slam bid.
+# (''basketball'') To dunk forcefully.
+# (''colloquial'') To speak badly of.
+#: ''Don't ever slam me in front of the boss like that again!''
