fmt; fix broken heading <sandy#59740>

--- a/wiki/sandy.wikitext
+++ b/wiki/sandy.wikitext
@@ -2,13 +2,16 @@
 [[Category:English language]]
 ===Etymology===
 [[sand]] + [[-y]]
-====Adjective=====
+
+====Adjective====
 '''sandy''' ([[sandier]], [[sandiest]])
 
 #covered with [[sand]]
 #having the colour of sand
+
 ===Etymology===
 [[Sand(ra)]] + [[-y]]
+
 ====Proper Noun====
 '''Sandy'''
 
