--- a/wiki/Huancayo.wikitext
+++ b/wiki/Huancayo.wikitext
@@ -2,4 +2,4 @@
 ===Proper noun===
 '''Huancayo'''
 
-A village located in the central highlands of [[Peru]]
+# A village located in the central highlands of [[Peru]]
