/* Proper Noun */ fmt <Tar Heel#39684>

--- a/wiki/Tar_Heel.wikitext
+++ b/wiki/Tar_Heel.wikitext
@@ -4,7 +4,7 @@
 '''[[Tar]] [[Heel]]'''
 
 # A resident or native of the US state of North Carolina
-#: ''I'm a Tar Heel born/I'm a Tar Heel bred/And when I die/I'm a Tar Heel dead.''
+#: ''I'm a Tar Heel born<br/>I'm a Tar Heel bred<br/>And when I die<br/>I'm a Tar Heel dead.''
 # A player on a sports team representing the University of North Carolina at Chapel Hill
 #: ''Michael Jordan is one of many Tar Heel basketball standouts''
 # A student of the University of North Carolina at Chapel Hill
