various cleanup <tar#32493>

--- a/wiki/tar.wikitext
+++ b/wiki/tar.wikitext
@@ -1,38 +1,33 @@
 ===Noun===
 '''tar'''
 
-# A [[black]], [[oily]], [[sticky]], [[viscous]] [[substance]], consisting mainly of [[hydrocarbons]] produced by the [[distillation]] of [[organic]] materials such as [[wood]], [[peat]], or [[coal]].
+# A black, oily, sticky, viscous substance, consisting mainly of [[hydrocarbons]] derived from organic materials such as wood, peat, or coal.
 # Coal tar.
 # A solid residual byproduct of [[tobacco]] smoke.
+# (''slang, dated'') A sailor.
+
+====Related terms====
+*[[coal tar]]
+*[[mineral tar]]
+*[[Tar Heel]]
+*[[tar water]]
+*[[tar board]]
+*[[wood tar]]
 
 ====Translations====
 *Catalan: [[quitrà]] ''m'' (1,3), [[quitrà]] [[de]] [[carbó]] ''m'' (2)
 *Esperanto: [[gudro]]
 *Spanish: [[alquitrán]] ''m'' (1,2,3)
 
-===Noun - informal===
-# A [[sailor]].
-
 ===Verb===
-# to tar
-# tarred
-# tarring
-# tars
+'''tar'''
 
-To coat with tar.
+# To coat with tar.
 
 ====Translations====
 *Catalan: [[enquitranar]] 
 *Esperanto: [[gudri]] 
 *Spanish: [[alquitranar]] 
-
-====Related terms====
-*[[Coal tar]]
-*[[Mineral tar]]
-*[[Tar Heel]]
-*[[Tar water]]
-*[[Tar board]]
-*[[Wood tar]]
 
 ====Related terms====
 *[[tar and feather]]
