fix fmt errors <Senegalese#36010>

--- a/wiki/Senegalese.wikitext
+++ b/wiki/Senegalese.wikitext
@@ -1,13 +1,20 @@
+==English==
 ===Noun===
+'''Senegalese'''
+
 #A person from [[Senegal]] or of Senegalese descent.
-===Translations====
-*[[Dutch]]: [[Senegalees]] ''m'', Senegalese ''f''
-*[[French]]: [[Sénégalais]] ''m'', [[Sénégalaise]] ''f''
-*[[German]]: Senegalese ''m'', [[Senegalesin]] ''f''
+
+====Translations====
+*Dutch: [[Senegalees]] ''m'', Senegalese ''f''
+*French: [[Sénégalais]] ''m'', [[Sénégalaise]] ''f''
+*German: Senegalese ''m'', [[Senegalesin]] ''f''
 
 ===Adjective===
+'''Senegalese'''
+
 #Of, from, or pertaining to Senegal, the Senegalese people or the Senegalese language.
-===Translations====
-*[[Dutch]]: [[Senegalees]], Senegalese
-*[[French]]: [[sénégalais]] ''m'', [[sénégalaise]] ''f''
-*[[German]]: [[senegalesisch]]
+
+====Translations====
+*Dutch: [[Senegalees]], Senegalese
+*French: [[sénégalais]] ''m'', [[sénégalaise]] ''f''
+*German: [[senegalesisch]]
