--- a/wiki/pall.wikitext
+++ b/wiki/pall.wikitext
@@ -1,7 +1,13 @@
 ==English==
 
+===Noun===
+# A heavy [[canvas]].
+
 ===Verb===
 
 '''to pall'''
 
 #To make vapid or insipid; to make lifeless or spiritless; to dull; to weaken.
+
+===Related terms===
+* [[tarpaulin]]
