fix broken wikipedia link; merge british and american english in our current usual way <encyclopaedia#32>

--- a/wiki/encyclopaedia.wikitext
+++ b/wiki/encyclopaedia.wikitext
@@ -1,14 +1,17 @@
-==British English==
-Encyclopedia \En*cy`clo*pe"di*a\, Encyclopaedia
-\En*cy`clo*p[ae]"di*a\, n.
+==English==
+===Noun===
+'''encyclopaedia'''
+
 # a reference work (often in several volumes) containing in-depth articles on various topics (often arranged in alphabetical order) dealing with a wide range of subjects or with some particular specialty
 
-==Translations==
+====Alternative spellings====
+*[[encyclopedia]]
+
+====Translations====
 *[[Catalan]]: [[enciclopèdia]]
 *Chinese: [[百科全书]]
 *Danish: [[leksikon]], a [[Danish]]: [[encyklopædi]] are bigger and do have som longer and deeper articles.
 *Dutch: [[encyclopedie]] ''m''
-*[[English (American)]]: [[encyclopedia]]
 *Finnish: [[tietosanakirja]], [[ensyklopedia]]
 *French: [[encyclopédie]] ''f''
 *German: [[Lexikon]] ''n''
@@ -22,9 +25,6 @@ Encyclopedia \En*cy`clo*pe"di*a\, Encyclopaedia
 *Spanish: [[enciclopedia]] ''m''
 *Swedish: [[encyklopedi]]
 
-==See Also==
-
+===See also===
 * [[Wikipedia]]
-
-== Further reading ==
-* [[en:Encyclopedia|Wikipedia article]]
+* [[w:Encyclopedia|Wikipedia article encyclopaedia]]
