--- a/wiki/encyclopaedia.wikitext
+++ b/wiki/encyclopaedia.wikitext
@@ -15,6 +15,7 @@
 *Finnish: [[tietosanakirja]], [[ensyklopedia]]
 *French: [[encyclopédie]] ''f''
 *German: [[Lexikon]] ''n''
+*Hebrew: [[אנציקלופדיה]] ''n''
 *Indonesian: [[ensiklopedia]]
 *[[Interlingua]]: [[encyclopedia]]
 *Japanese: [[大辞典]] (だいじてん, dai-jiten)
