--- a/wiki/encyclopaedia.wikitext
+++ b/wiki/encyclopaedia.wikitext
@@ -10,7 +10,7 @@
 ====Translations====
 *[[Catalan]]: [[enciclopèdia]]
 *Chinese: [[百科全书]]
-*Danish: [[leksikon]], a [[Danish]]: [[encyklopædi]] are bigger and do have som longer and deeper articles.
+*Danish: [[leksikon]], a [[Danish]]: [[encyklopædi]] are bigger and do have some longer and deeper articles.
 *Dutch: [[encyclopedie]] ''m''
 *Finnish: [[tietosanakirja]], [[ensyklopedia]]
 *French: [[encyclopédie]] ''f''
