--- a/wiki/grain_of_salt.wikitext
+++ b/wiki/grain_of_salt.wikitext
@@ -1,10 +1,13 @@
 ==English==
 
-A '''grain of salt''' is a literal translation of an ancient [[Latin]] phrase, '''''cum grano salis'''''.
+===Etymology===
+From Latin ''cum grano salis'', literally ''with a grain of salt'', figuratively a bit of common sense (as the head was presumed filled with salt).
 
-A sort of [[proverb]], the Latin expression indicated that in everything we should use at least a grain of the [[salt]] with which the head was, in Roman times, presumed to be filled.  It was, then, a recall to common sense, a request for prudence or reflection before action.
+===Noun Phrase===
+'''a grain of salt'''
 
-'''To take''' something '''with a grain of salt''' now means to accept it less than fully.  The [[Oxford English Dictionary]] dates this usage back to 1647.
+# A bit of common-sensical skepticism.  Generally used in some form of ''to take with a grain of salt.''
+#: ''I'd take anything I read in that paper with a grain of salt.''
 
 ====Translations====
 *Dutch: [[korrel]]tje [[zout]] (iets met een korreltje zout nemen)
