/* Etymology */ <grain of salt#121>

--- a/wiki/grain_of_salt.wikitext
+++ b/wiki/grain_of_salt.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From Latin ''cum grano salis'', literally ''with a grain of salt'', figuratively a bit of common sense (as the head was presumed filled with salt).
+From Latin ''cum grano salis'', literally ''with a grain of salt'', figuratively ''with a bit of common sense'' (the head being presumed filled with salt).
 
 ===Noun Phrase===
 '''a grain of salt'''
