/* Alternative spellings */ ++ <encyclopaedia#32>

--- a/wiki/encyclopaedia.wikitext
+++ b/wiki/encyclopaedia.wikitext
@@ -5,6 +5,7 @@
 # a reference work (often in several volumes) containing in-depth articles on various topics (often arranged in alphabetical order) dealing with a wide range of subjects or with some particular specialty
 
 ====Alternative spellings====
+*[[encyclopædia]]
 *[[encyclopedia]]
 
 ====Translations====
