balance trans cols; fix heading fmt <Bologna#36049>

--- a/wiki/Bologna.wikitext
+++ b/wiki/Bologna.wikitext
@@ -1,8 +1,6 @@
 ==English==
 ===Pronunciation===
-*[[AHD]]: //
 *[[IPA]]: /bəˈlɒnjə/
-*[[SAMPA]]: //
 
 ===Etymology===
 Italian, from Latin ''[[Bononia]]''
@@ -13,7 +11,7 @@ Italian, from Latin ''[[Bononia]]''
 #A province of [[Emilia-Romagna]], [[Italy]].
 #A city, the capital of Bologna also of Emilia-Romagna.
 
-====Related terms===
+====Related terms====
 *[[bolognese]]
 
 ====Translations====
@@ -23,15 +21,15 @@ Italian, from Latin ''[[Bononia]]''
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *Bulgarian: [[Болоня]] (Bolonya)
 *French: [[Bologne]]
-*Italian: Bologna
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
+*Italian: Bologna
 *Latvian: [[Boloņa]] ''f''
 |}
 |}
@@ -41,15 +39,15 @@ Italian, from Latin ''[[Bononia]]''
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *Bulgarian: [[Болоня]] (Bolonya)
 *French: [[Bologne]]
-*Italian: Bologna ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
+*Italian: Bologna ''f''
 *Latvian: [[Boloņa]] ''f''
 |}
 |}
@@ -64,16 +62,18 @@ The translations below need to be checked by native speakers and inserted into t
 
 ===Noun===
 <!--capitalisation?-->
-#(''also'' '''Bologne'''<!--capitalisation?-->) An Italian [[sausage]] of a pinkish color/colour.
+#(''also'' [[Bologne]]<!--capitalisation?-->) An Italian [[sausage]] of a pinkish color/colour.
 
 ===See also===
 *[[w:Bologna|Wikipedia on Bologna, the city]]
 
 ----
+
 ==Italian==
 ===Pronunciation===
 *[[IPA]]: /boˈloɲa/
 
 ===Proper noun===
 '''Bologna'''
+
 #Bologna (''province, city'')
