balance columns; alt spell++; other fmt <encyclopedia#27>

--- a/wiki/encyclopedia.wikitext
+++ b/wiki/encyclopedia.wikitext
@@ -2,39 +2,38 @@
 ===Etymology===
 Latin ''encyclopaedia'' from Greek ''en'' + ''kyklo(s)'' circle + ''paideia'' children
 
-===Variants===
-(''chiefly British''): '''encyclopaedia'''.  The spelling '''encyclopedia''' is standard in American, Canadian, Australian and International English and is also common in British English.
-
 <!--Hm, this definition looks as though it has been lifted from somewhere.  Do we have permission?-->
-Encyclopedia \En*cy`clo*pe"di*a\, Encyclopaedia
-\En*cy`clo*p[ae]"di*a\, n.
 # A reference work (often in several volumes) containing in-depth articles on various topics (often arranged in alphabetical order) dealing with a wide range of subjects or with some particular specialty
+
+====Alternative spellings====
+*[[encyclopædia]]
+*(''chiefly British''): '''encyclopaedia'''.  The spelling '''encyclopedia''' is standard in American, Canadian, Australian and International English and is also common in British English.
 
 ====Translations====
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
+<!--left columns-->
 *[[Basque]]: [[entziklopedia]]
 *Bulgarian: [[енциклопедия]] ''f''
 *[[Catalan]]: [[enciclopèdia]]
-*Chinese: [[百科全書]],[[百科全书]] (bai ke quan shu) 
+*Chinese: [[百科全書]], [[百科全书]] (bai ke quan shu) 
 *Dutch: [[encyclopedie]] ''m''
-*{{da}}: encyklopædi
+*{{da}}: [[encyklopædi]]
 *[[Esperanto]]: [[enciklopedio]]
 *{{fr}}: [[encyclopédie]] ''f''
 *{{fi}}: [[tietosanakirja]], [[ensyklopedia]]
 *{{de}}: [[Enzyklopädie]] ''f''
 *Greek: [[ενγυκλοπαδεια]] (engyklopaideia)
 *Indonesian: [[ensiklopedia]]
-*[[Interlingua]]: encyclopedia
-*Italian: [[enciclopedia]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+<!--right columns-->
+*[[Interlingua]]: encyclopedia
+*Italian: [[enciclopedia]] ''f''
 *Japanese: [[大辞典]] (だいじてん, dai-jiten)
 *Latin: [[encyclopaedia]]
 *Lithuanian: [[enciklopedija]] ''f''
@@ -53,6 +52,4 @@ Encyclopedia \En*cy`clo*pe"di*a\, Encyclopaedia
 
 ===See also===
 *[[Wikipedia]]
-
-===Further reading===
-*[[en:Encyclopedia|Wikipedia article on encyclopedias]]
+*[[w:Encyclopedia|Wikipedia article on encyclopedias]]
