/* External links */ fix wikipedia link; enable unicode site link <Unicode#3975>

--- a/wiki/Unicode.wikitext
+++ b/wiki/Unicode.wikitext
@@ -26,5 +26,5 @@
 *Spanish: unicode ''m''
 
 ===External links===
-*[[en:Unicode|Wikipedia article on Unicode]]
-*http://www.unicode.org
+*[[w:Unicode|Wikipedia article on Unicode]]
+*[http://www.unicode.org Unicode website]
