/* See also */ fix wikipedia link <raccoon#3995>

--- a/wiki/raccoon.wikitext
+++ b/wiki/raccoon.wikitext
@@ -26,4 +26,4 @@
 [[image:raccoon.jpg]]
 
 ====See also====
-*[[en:raccoon|Wikipedia article about raccoons]]
+*[[w:raccoon|Wikipedia article about raccoons]]
