/* Noun Phrase */ +fantasy, horror <speculative fiction#64255>

--- a/wiki/speculative_fiction.wikitext
+++ b/wiki/speculative_fiction.wikitext
@@ -3,7 +3,7 @@
 ===Noun Phrase===
 '''speculative fiction'''
 
-# A class of [[fiction]] including but not limited to [[science fiction]], dealing with worlds, themes and characters not part of everyday life.
+# A class of [[fiction]] including but not necessairly limited to [[fantasy]], [[horror]] and [[science fiction]], dealing with worlds, themes and characters not part of everyday life.
 
 ===See Also===
 *[[fantasy]]
