--- a/wiki/Tamil_Nadu.wikitext
+++ b/wiki/Tamil_Nadu.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''[[Tamil]] Nadu'''
 
-#State in southern [[India]] which has [[Chennai]] (formerly known as [[Madras]]) as its capital.
+#State in southern [[India]] which has [[Chennai]] (formerly known as [[Madras]]) as its capital. The other cities include [[Madurai]],[[Tiruchy]],[[Coimbatore]]
 
 ====Translations====
 *[[Tamil]]: [[தமிழ்நாடு]], [[தமிழ் நாடு]]
