/* Noun */ simplify pipelinks <evidence#64235>

--- a/wiki/evidence.wikitext
+++ b/wiki/evidence.wikitext
@@ -1,10 +1,9 @@
 ==English==
 
 ===Noun===
-
 '''evidence''' (uncountable)
 
-#[[fact|Facts]] or [[observation|observations]] presented in support of an [[assertion]].
+#[[Fact]]s or [[observation]]s presented in support of an [[assertion]].
 #''(legal)'' Anything admitted by a [[court]] to prove or disprove alleged matters of fact in a [[trial]].
 
 ===Verb===
