--- a/wiki/stack.wikitext
+++ b/wiki/stack.wikitext
@@ -1,13 +1,29 @@
 ==English==
 
-===Adjective===
+===Noun===
 
 '''stack'''
 
-#A large pile of hay, grain, straw, or the like, usually of a nearly conical form, but sometimes rectangular or oblong, contracted at the top to a point or ridge, and sometimes covered with thatch.
-#A pile of poles or wood, indefinite in quantity.
-#A pile of wood containing 108 cubic feet.
-#A number of flues embodied in one structure, rising above the roof. Hence:
-#Any single insulated and prominent structure, or upright pipe, which affords a conduit for smoke; as, the brick smokestack of a factory; the smokestack of a steam vessel.
-#A section of memory in a computer used for temporary storage of data, in which the last datum stored is the first retrieved.
-#A data structure within random-access memory used to simulate a hardware stack; as, a push-down stack.
+# A large pile of hay, grain, straw, or the like, larger at the bottom than the top, sometimes covered with thatch.
+# A pile of identical objects, each directly on top of the last.
+#: ''Please bring me a chair from that stack in the corner.''
+# A pile of poles or wood, indefinite in quantity.
+# A pile of wood containing 108 cubic feet.
+# A [[smokestack]].
+# (''computing'') A linear [[data structure]] in which the last datum stored is the first retrieved (just as the last item placed on a stack is the first one removable).
+# (''computing'') A section of memory in a computer used for temporary storage of data, in which the last datum stored is the first retrieved
+
+===Verb===
+'''stack'''
+
+# To place objects or material in the form of a stack.
+#: ''Please stack those chairs in the corner.''
+# To place an object on a stack.
+#: ''Please stack that chair on top of the others.''
+# To arrange the cards in a deck in a particular manner.
+#: ''This is the third hand in a row you've drawn a four-of-a-kind.  Someone is stacking the deck!''
+
+===Related Terms===
+*[[stackable]]
+*[[stacked]]
+*[[unstack]]
