/* Noun */ +defn <smokestack#55548>

--- a/wiki/smokestack.wikitext
+++ b/wiki/smokestack.wikitext
@@ -1,6 +1,8 @@
 ==English==
 ===Noun===
-'''smokestack''' ([[smokestacks]])
+'''smokestack'''
+
+# A conduit or group of conduits atop a structure allowing smoke to flow out.
 
 ====Translations====
 *Chinese: [[煙窗]], [[烟窗]]
