/* Noun */ ditch day is tomorrow, frosh <stack#62657>

--- a/wiki/stack.wikitext
+++ b/wiki/stack.wikitext
@@ -11,7 +11,8 @@
 # A pile of wood containing 108 cubic feet.
 # A [[smokestack]].
 # (''computing'') A linear [[data structure]] in which the last datum stored is the first retrieved (just as the last item placed on a stack is the first one removable).
-# (''computing'') A section of memory in a computer used for temporary storage of data, in which the last datum stored is the first retrieved
+# (''computing'') A section of memory in a computer used for temporary storage of data, in which the last datum stored is the first retrieved.
+# (''slang'') A construction intended to keep [[frosh]] out of a senior's room on Caltech's [[ditch day]].
 
 ===Verb===
 '''stack'''
